# HealthData

./: .gitignore  Dockerfile  README.md  pyproject.toml  token.json  working.py
analysis/: oura.ipynb
python_src/: pyproject.toml
python_src/oura/: oura.py
python_src/oura/tables/: readiness.py  sleep.py
src/: hello_world.py
src/data_sources/oura/: oura_tables.py
src/data_sources/oura/.ipynb_checkpoints/: oura_tables-checkpoint.py
src/data_sources/oura/tables/: activity.py
src/oura/: oura.py
swhealth/: README.md  working.py
swhealth/oura/: oura.py
